# twingrid-binance

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyrefly.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e9ba3c1ea8d_initial_schema.py  7f35e75d56cf_add_missing_account_columns.py  aa04e0c8959e_add_workspaces_and_invites.py  aff001_affiliate_system.py  aff002_affiliate_wallet.py  bb1234567890_enterprise_blueprint.py  bt001_backtest_history.py  cc01fee0system_add_twin_grid_fee_system.py  dddd601388cc_add_accounts_and_settings.py  email001_email_logs.py  ff772f117355_add_api_key_hash_column.py  md001_market_data_cache.py  sub001_subscription_system.py  tg001_telegram_notifications.py
backend/app/: bootstrap.py  main.py  scheduler.py  worker.py  ws_runner.py
backend/app/api/: deps.py
backend/app/core/: celery_app.py  config.py  database.py  email.py  email_templates.py  enums.py  logging.py  rate_limit.py  redis_client.py  security.py  symbols.py  telegram_bot.py
backend/app/models/: __init__.py  account.py  affiliate_commission.py  affiliate_withdrawal.py  ai_tuner_session.py  audit_log.py  backtest_history.py  basket.py  deposit_request.py  email_log.py  equity_snapshot.py  event.py  fee_transaction.py  market_data_cache.py  order.py  platform_settings.py  session.py  settings.py  subscription_invoice.py  subscription_plan.py  user.py  workspace.py  (+3 more)
backend/scripts/: backfill_fees.py  fix_fee_overrides.py
(+159 files in other folders)
