[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twingrid-backend"
version = "0.1.0"
description = "TWIN GRID Console Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.6.4",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "redis>=5.0.3",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.2",
    "python-multipart>=0.0.9",
    "cryptography>=42.0.5",
    "pyotp>=2.9.0",
    "websockets>=12.0",
    "aiosmtplib>=3.0.1",
    "httpx>=0.27.0",
    "celery>=5.3.6",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "docker>=7.0.0",
    "google-genai>=1.0.0",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.3.5",
    "mypy>=1.9.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
